minor documentation change
