# router/router.js
@@ -2,7 +2,7 @@ let express =require("express");
 const Router = express.Router();
 let controller= require( "../controllers/UrlShortener.js");
 Router.get("", function (req, res) {
-    controller.fetchAllUrls(req, res, req.query["url_id"]);
+    controller.fetchAllUrls(req, res, req.query["shortened_url"]);
 });
 Router.post("", function (req, res) {
     controller.shortenUrl(req, res, req.body);
